completed project- PSD to HTML Conversion

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         </div>
       </div>
       <!-- Portfolio Title End -->
-      
+
       <!-- Portfolio Links Start -->
       <ul class="nav nav-pills justify-content-center mb-5">
         <li class="nav-item">
@@ -405,7 +405,7 @@
         <!-- Web Design End -->
 
         <div class="tab-pane fade" id="ui-design">
-          <div class="row gy-4">            
+          <div class="row gy-4">
             <!-- Card Start -->
             <div class="col-6 col-lg-4">
               <div class="portfolio-content position-relative">
@@ -416,7 +416,7 @@
                 </div>
               </div>
             </div>
-            <!-- Card End -->            
+            <!-- Card End -->
           </div>
         </div>
         <!-- UI Design End -->
@@ -434,13 +434,12 @@
               </div>
             </div>
             <!-- Card End -->
-            </div>
+          </div>
         </div>
         <!-- Branding End -->
 
         <div class="tab-pane fade" id="logo-design">
           <div class="row gy-4">
-            
             <!-- Card Start -->
             <div class="col-6 col-lg-4">
               <div class="portfolio-content position-relative">
@@ -455,74 +454,33 @@
           </div>
         </div>
         <!-- Logo Design End -->
-        <div class="tab-pane fade" id="illustration"><div class="row gy-4">
-          <!-- Card Start -->
-          <div class="col-6 col-lg-4">
-            <div class="portfolio-content position-relative">
-              <img class="d-block w-100" src="assets/img/p01.jpg" alt="">
-              <div
-                class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
-                <a href="javascript:void(0)" class="h3 text-decoration-none">Web Design</a>
+
+        <div class="tab-pane fade" id="illustration">
+          <div class="row gy-4">
+            <!-- Card Start -->
+            <div class="col-6 col-lg-4">
+              <div class="portfolio-content position-relative">
+                <img class="d-block w-100" src="assets/img/p05.jpg" alt="">
+                <div
+                  class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+                  <a href="javascript:void(0)" class="h3 text-decoration-none">Illustration</a>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- Card End -->
-          <!-- Card Start -->
-          <div class="col-6 col-lg-4">
-            <div class="portfolio-content position-relative">
-              <img class="d-block w-100" src="assets/img/p02.jpg" alt="">
-              <div
-                class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
-                <a href="javascript:void(0)" class="h3 text-decoration-none">UI Design</a>
+            <!-- Card End -->
+            <!-- Card Start -->
+            <div class="col-6 col-lg-4">
+              <div class="portfolio-content position-relative">
+                <img class="d-block w-100" src="assets/img/p06.jpg" alt="">
+                <div
+                  class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+                  <a href="javascript:void(0)" class="h3 text-decoration-none">Illustration</a>
+                </div>
               </div>
             </div>
+            <!-- Card End -->
           </div>
-          <!-- Card End -->
-          <!-- Card Start -->
-          <div class="col-6 col-lg-4">
-            <div class="portfolio-content position-relative">
-              <img class="d-block w-100" src="assets/img/p03.jpg" alt="">
-              <div
-                class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
-                <a href="javascript:void(0)" class="h3 text-decoration-none">Branding</a>
-              </div>
-            </div>
-          </div>
-          <!-- Card End -->
-          <!-- Card Start -->
-          <div class="col-6 col-lg-4">
-            <div class="portfolio-content position-relative">
-              <img class="d-block w-100" src="assets/img/p04.jpg" alt="">
-              <div
-                class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
-                <a href="javascript:void(0)" class="h3 text-decoration-none">Logo Design</a>
-              </div>
-            </div>
-          </div>
-          <!-- Card End -->
-          <!-- Card Start -->
-          <div class="col-6 col-lg-4">
-            <div class="portfolio-content position-relative">
-              <img class="d-block w-100" src="assets/img/p05.jpg" alt="">
-              <div
-                class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
-                <a href="javascript:void(0)" class="h3 text-decoration-none">Illustration</a>
-              </div>
-            </div>
-          </div>
-          <!-- Card End -->
-          <!-- Card Start -->
-          <div class="col-6 col-lg-4">
-            <div class="portfolio-content position-relative">
-              <img class="d-block w-100" src="assets/img/p06.jpg" alt="">
-              <div
-                class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
-                <a href="javascript:void(0)" class="h3 text-decoration-none">Web Design</a>
-              </div>
-            </div>
-          </div>
-          <!-- Card End -->
-        </div></div>
+        </div>
         <!-- Illustration End -->
       </div>
 
@@ -548,7 +506,7 @@
       <div class="row gy-4">
         <!-- Card Start -->
         <div class="col-12 col-md-6 col-lg-3 px-4">
-          <div class="pricing-content text-center text-light text-uppercase py-2 px-5">
+          <div class="pricing-content text-center text-light text-uppercase py-2">
             <div class="pricing-header d-flex flex-column justify-content-center border border-5 border-light my-3">
               <h3><sup>$</sup>
                 55<sub>/MO</sub></h3>
@@ -578,7 +536,7 @@
         <!-- Card End -->
         <!-- Card Start -->
         <div class="col-12 col-md-6 col-lg-3 px-4">
-          <div class="pricing-content text-center text-light text-uppercase py-2 px-5">
+          <div class="pricing-content text-center text-light text-uppercase py-2">
             <div class="pricing-header d-flex flex-column justify-content-center border border-5 border-light my-3">
               <h3><sup>$</sup>
                 55<sub>/MO</sub></h3>
@@ -608,7 +566,7 @@
         <!-- Card End -->
         <!-- Card Start -->
         <div class="col-12 col-md-6 col-lg-3 px-4">
-          <div class="pricing-content text-center text-light text-uppercase py-2 px-5">
+          <div class="pricing-content text-center text-light text-uppercase py-2">
             <div class="pricing-header d-flex flex-column justify-content-center border border-5 border-light my-3">
               <h3><sup>$</sup>
                 55<sub>/MO</sub></h3>
@@ -638,7 +596,7 @@
         <!-- Card End -->
         <!-- Card Start -->
         <div class="col-12 col-md-6 col-lg-3 px-4">
-          <div class="pricing-content text-center text-light text-uppercase py-2 px-5">
+          <div class="pricing-content text-center text-light text-uppercase py-2">
             <div class="pricing-header d-flex flex-column justify-content-center border border-5 border-light my-3">
               <h3><sup>$</sup>
                 55<sub>/MO</sub></h3>
@@ -697,7 +655,7 @@
           <div class="col-6 col-lg-3 mb-4 mb-lg-0">
             <div class="counter-card text-center p-4 border border-light">
               <h3 class="display-3 fw-semibold">500</h3>
-              <p class="h5 fw-semibold">Cups of Cofee Offered</p>
+              <p class="h5 fw-semibold">Cups of Cofee</p>
             </div>
           </div>
           <!-- Card Start -->
